--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Hello there!</h1>
     <a href="/me.html">My other page</a>
     <br>
-    <a href="PAV II Ejercicio 2 - básico.html">Ejercicio 2</a>
+    <a href="/Ejercicio2.html">Ejercicio 2</a>
   </body>
 </html>
