--- a/EjercicioII.html
+++ b/EjercicioII.html
@@ -1,71 +1,75 @@
 <html>
-<head>
-<meta charset="UTF-8" />
-<script src="script.js"></script>
-<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+  <head>
+  </head>
+  <body>
+  <head>
+  <meta charset="UTF-8" />
+  <script src="script.js"></script>
+  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
-<h1>HTML</h1>
+  <h1>HTML</h1>
 
-<p>
-  <em>HTML</em> utiliza etiquetas o marcas, que consisten en breves
-  instrucciones de comienzo y final, mediante las cuales se determina la
-  forma en la que debe aparecer en su navegador el texto, imágenes y los
-  demás elementos.
-</p>
-<p>
-  Toda etiqueta se identifica porque está encerrada entre los signos menor
-  que (<) y mayor que (>), y algunas tienen atributos que pueden tomar algún
-  valor. En general las etiquetas se aplicarán de dos formas especiales:
-</p>
-<p>
-  Se abren y se cierran, como por ejemplo: &lt;b&gt;negrita&lt;/b&gt;, que
-  se vería en su navegador web como <b>negrita</b>.
-</p>
-<p>
-  No pueden abrirse y cerrarse, como &lt;hr/&gt;, que se vería en su
-  navegador web como una línea horizontal.
-</p>
+  <p>
+    <em>HTML</em> utiliza etiquetas o marcas, que consisten en breves
+    instrucciones de comienzo y final, mediante las cuales se determina la
+    forma en la que debe aparecer en su navegador el texto, imágenes y los
+    demás elementos.
+  </p>
+  <p>
+    Toda etiqueta se identifica porque está encerrada entre los signos menor
+    que (<) y mayor que (>), y algunas tienen atributos que pueden tomar algún
+    valor. En general las etiquetas se aplicarán de dos formas especiales:
+  </p>
+  <p>
+    Se abren y se cierran, como por ejemplo: &lt;b&gt;negrita&lt;/b&gt;, que
+    se vería en su navegador web como <b>negrita</b>.
+  </p>
+  <p>
+    No pueden abrirse y cerrarse, como &lt;hr/&gt;, que se vería en su
+    navegador web como una línea horizontal.
+  </p>
 
-<hr />
+  <hr />
 
-<h3>Todo documento html debe contener:</h3>
+  <h3>Todo documento html debe contener:</h3>
 
-<ol>
-  <li>Un elemento html que contiene todo el documento</li>
-  <li>Una cabecera llamada head</li>
-  <li>
-    Un cuerpo, llamado body, que el código html que se renderiza en el
-    navegador
-  </li>
-</ol>
+  <ol>
+    <li>Un elemento html que contiene todo el documento</li>
+    <li>Una cabecera llamada head</li>
+    <li>
+      Un cuerpo, llamado body, que el código html que se renderiza en el
+      navegador
+    </li>
+  </ol>
 
-<h3>Dentro de un documento html puede encontrarse lo siguiente:</h3>
+  <h3>Dentro de un documento html puede encontrarse lo siguiente:</h3>
 
-<ul>
-  <li>Texto,Imágenes,Videos</li>
-  <li>Scripts en lenguaje javascript</li>
-  <li>Hojas de estilo CSS</li>
-  <li>Formularios de ingreso de datos</li>
-  <li>Enlaces a archivos externos</li>
-  <li>Y otras características detalladas en https://www.w3.org/</li>
-</ul>
+  <ul>
+    <li>Texto,Imágenes,Videos</li>
+    <li>Scripts en lenguaje javascript</li>
+    <li>Hojas de estilo CSS</li>
+    <li>Formularios de ingreso de datos</li>
+    <li>Enlaces a archivos externos</li>
+    <li>Y otras características detalladas en https://www.w3.org/</li>
+  </ul>
 
-<p>Puede insertar video utilizando el elemento iframe de html:</p>
+  <p>Puede insertar video utilizando el elemento iframe de html:</p>
 
-&lt;iframe width="254" height="180"
-src="https://www.youtube.com/embed/CdfMG_Qy00E?list=PLU8oAlHdN5BnX63lyAeV0LzLnpGudgRrK"
-<br />
-frameborder="0" allowfullscreen&gt;&lt;/iframe &gt;
-
-<br />
-
-<iframe
-  width="254"
-  height="180"
+  &lt;iframe width="254" height="180"
   src="https://www.youtube.com/embed/CdfMG_Qy00E?list=PLU8oAlHdN5BnX63lyAeV0LzLnpGudgRrK"
-  frameborder="0"
-  allowfullscreen
-></iframe>
+  <br />
+  frameborder="0" allowfullscreen&gt;&lt;/iframe &gt;
+
+  <br />
+
+  <iframe
+    width="254"
+    height="180"
+    src="https://www.youtube.com/embed/CdfMG_Qy00E?list=PLU8oAlHdN5BnX63lyAeV0LzLnpGudgRrK"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
 </body>
+  </body>
 </html>
