--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <a href="/EjercicioII.html">My other page</a>
     <br>
     <a href="/Ejercicio2.html">Ejercicio 2</a>
   </body>
