--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h1>Hello there!</h1>
     <a href="/EjercicioII.html">My other page</a>
     <br>
-    <a href="/Ejercicio2.html">Ejercicio 2</a>
+    <a href="/EjercicioIII.html">Ejercicio 2</a>
+    <br>
+    <a href="/EjercicioIV.html">Ejercicio 2</a>
+
   </body>
 </html>
