--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>Hello there!</h1>
-    <a href="/EjercicioII.html">My other page</a>
+    <a href="/EjercicioII.html">Ejercicio 2 - BASICO</a>
     <br>
-    <a href="/EjercicioIII.html">Ejercicio 2</a>
+    <a href="/EjercicioIII.html">Ejercicio 3 - TABLAS</a>
     <br>
-    <a href="/EjercicioIV.html">Ejercicio 2</a>
+    <a href="/EjercicioIV.html">Ejercicio 4 - FORM</a>
 
   </body>
 </html>
