--- a/EjercicioIII.html
+++ b/EjercicioIII.html
@@ -18,7 +18,7 @@
                 <td style="text-align:left">Televisor <b><i>Sanyo</i></b></td> 
                 <td style="text-align:left">5000</td>
                 <td style="text-align:left">10</td>
-                <td style="text-align:center"><img src="D:\Carpetas de Utiles\Facultad\2022\PAV II\img\TelevisorSanyo.jpg" style="width:50px"></td>
+                <td style="text-align:center"><img src="Img/TelevisorSanyo.jpg" style="width:50px"></td>
             </tr>
             <tr>
                 <td>Lavarropa <b><i>Samsung</i></b></td>
