--- a/EjercicioIV.html
+++ b/EjercicioIV.html
@@ -9,15 +9,15 @@
             <label>Password:</label><input type="password" name="password">
             <br>
             <input type="submit" name="Enviar">
-            <br>
-            <input type="button" name="boton" value="Botón">
-            <br>
+            <br><br>
+            <input type="button" name="boton" value="Boton">
+            <br><br>
             <label>Radio I </label><input type="radio" name="rbt">
             <br>
             <label>Radio II </label><input type="radio" name="rbt">
-            <br>
-            <label>Única Check</label><input type="checkbox" name="cbx">
-            <br>
+            <br><br>
+            <label>Unica Check</label><input type="checkbox" name="cbx">
+            <br><br>
             <textarea rows="5" cols="50" name="txtArea" placeholder="Text Area"></textarea>
         </form>
     </body>
