3 files modified, 4 deleted

--- a/EjercicioII.html
+++ b/EjercicioII.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>HTML</h1>
+  <p style="text-align:right"><a href="/index.html" >Volver</a></p>
 
   <p>
     <em>HTML</em> utiliza etiquetas o marcas, que consisten en breves
