--- a/EjercicioIII.html
+++ b/EjercicioIII.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Listado de Productos</h1>
+        <p style="text-align:right"><a href="/index.html" >Volver</a></p>
 
         <table>
             <tr>
@@ -18,19 +19,19 @@
                 <td style="text-align:left">Televisor <b><i>Sanyo</i></b></td> 
                 <td style="text-align:left">5000</td>
                 <td style="text-align:left">10</td>
-                <td style="text-align:center"><img src="Img/TelevisorSanyo.jpg" style="width:50px"></td>
+                <td style="text-align:center"><img src="https://pymes2021.azurewebsites.net/imagenes/televisor.jpg" style="width:50px"></td>
             </tr>
             <tr>
                 <td>Lavarropa <b><i>Samsung</i></b></td>
                 <td style="text-align:left">8000</td>
                 <td style="text-align:left"><b>Sin Stock!!!</b>></td>
-                <td style="text-align:center"><img src="D:\Carpetas de Utiles\Facultad\2022\PAV II\img\LavarropaSamsung.jpg" style="width:50px"></td>            
+                <td style="text-align:center"><img src="https://pymes2021.azurewebsites.net/imagenes/lavarropas.jpg" style="width:50px"></td>            
             </tr>
             <tr>
                 <td>Cocina <b><i>Longvie</i></b></td>
                 <td style="text-align:left">9000</td>
                 <td style="text-align:left">4</td>
-                <td style="text-align:center"><img src="D:\Carpetas de Utiles\Facultad\2022\PAV II\img\CocinaLongvie.jpg" style="width:50px"></td>            
+                <td style="text-align:center"><img src="https://pymes2021.azurewebsites.net/imagenes/cocina.jpg" style="width:50px"></td>            
             </tr>
             <tr>
                 <td colspan="2">Productos en Stock en la sucursal</td>
